# bullshit

./: .gitignore  stack.yaml  treewalk.cabal
cbits/: wrapper.c
src/: Main.hs  TH.hs
