name:                treewalk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tene/treewalk#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Weeks
maintainer:          tene@allalone.org
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable treewalk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, unix, directory, filepath, stm
  ld-options:          -pthread
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
