name:                treewalk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tene/treewalk#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Weeks
maintainer:          tene@allalone.org
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable treewalk
  hs-source-dirs:      src
  main-is:             Main.hs
--  other-modules:       TH
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, unix, directory, filepath, stm, async, filemanip, unagi-chan, deepseq, bytestring, mmap, word8, SafeSemaphore, time, inline-c, atomic-primops, optparse-applicative, MissingH
  ld-options:          -pthread -static
  ghc-options:         -threaded -rtsopts -O2 -with-rtsopts=-N

  c-sources : cbits/wrapper.c
--  c-sources: src/TH.c
  cc-options: -O2 -std=c99

